# transition-summarize-py

./: .dockerignore  .gitignore  Dockerfile  Pipfile  alembic.ini  check-connection.py  main.py  postman-openapi.json  pyproject.toml  pytest.ini  readme.md  requirements.txt  run_tests.sh  start.sh
.cursor/rules/: fastapi.mdc
.github/: dependabot.yml
.github/workflows/: deploy.yml  feature.yml  integration-tests.yml  main.yml  master.yml  python-app.yml  reusable-setup-test.yml  setup-test.yml  test-results.yml
alembic/: env.py
alembic/versions/: 4c9036656343_create_processing_tables.py  70ace9e0d694_issue_8_processing_result_tables_new_.py  791bb4f8bfc6_create_user_table.py  83a59a748b63_initial_migration.py  83b5ea11315e_issue_8_processing_result_tables_new_.py  add_video_request_type.py  ebe8f264caf9_create_user_table.py  optimize_process_artifacts_for_large_text.py
app/: __main__.py  auth.py  cache.py  config.py  database.py  main.py  models.py  scheduler.py  settings.py
app/middleware/: request_id.py  security.py
app/processing/: processing.py
app/routers/: artifacts.py  audio.py  auth.py  video.py  youtube.py
app/schema/: models.py  pydantic_models.py
app/summary/: summarization.py  utils.py
app/tasks/: cleanup.py
app/transcribe/: OpenAIWhisperParser.py  models.py  transcription.py  utils.py
app/utils/: files.py  internet.py  tokens.py
app/video/: loader.py  metadata.py  transcription.py
app/youtube/: helpers.py  loader.py  metadata.py  proxy.py  transcriptions.py
deploy/: docker-compose.yml  local-docker-compose.yml  prod-docker-compose.yml
scripts/: long-srt-summary.py  process_coverage.py  process_pytest_results.py  run-integration-tests.sh
scripts/data/: 30min.srt  automat.srt  bring_40min.srt  long.txt  mieso.vtt  o_startegiach.srt
src/: main.py
testing/: test_api.py  test_main.http  test_sumarize.py
tests/: conftest.py  requests.http  test_api.py  test_database.py  test_models_metadata.py  test_sumarize.py  test_transcription_model.py  test_video.py  test_yt.py
tools/: process_audio_tree.py
(+13 files in other folders)
