[project]
name = "transition-summarize-py"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi",
    "pytube~=15.0.0",
    "langchain>=0.3.30,<1.0",
    "static-ffmpeg==2.7",
    "uvicorn[standard]",
    "h11~=0.14.0",
    "attrs~=23.2.0",
    "filelock~=3.14.0",
    "typing-extensions",
    "pyyaml",
    "idna~=3.7",
    "multidict",
    "sniffio~=1.3.1",
    "numpy",
    "orjson",
    "aiohttp",
    "aiosignal",
    "frozenlist",
    "certifi",
    "starlette",
    "requests",
    "anyio",
    "urllib3",
    "click",
    "tenacity",
    "langsmith",
    "sqlalchemy",
    "packaging",
    "marshmallow~=3.21.2",
    "jsonpointer~=2.4",
    "jsonpatch~=1.33",
    "websockets",
    "mutagen~=1.47.0",
    "distro~=1.9.0",
    "httpcore",
    "openai",
    "httpx",
    "regex",
    "fsspec",
    "tokenizers",
    "safetensors",
    "tqdm",
    "transformers>=4.57.6,<5",
    "tiktoken",
    "pydub~=0.25.1",
    "audioop-lts",
    "pytest",
    "pytest-asyncio",
    "pluggy~=1.5.0",
    "iniconfig~=2.0.0",
    "python-multipart",
    "dnspython",
    "jinja2",
    "rich",
    "pygments",
    "mdurl~=0.1.2",
    "typer",
    "shellingham~=1.5.4",
    "ujson",
    "markupsafe",
    "uvloop",
    "email-validator",
    "httptools",
    "watchfiles",
    "python-dotenv",
    "langchain-openai>=0.3.35,<1.0",
    "langchain-community>=0.3.31,<1.0",
    "pyee~=12.1.1",
    "ffmpeg~=1.4",
    "termcolor~=2.4.0",
    "pytest-sugar",
    "jiter",
    "python-jose[cryptography]",
    "bcrypt<5",
    "psycopg2-binary",
    "alembic",
    "pytest-html",
    "pytest-cov",
    "pydantic",
    "pydantic-core",
    "pydantic-settings",
    "testcontainers[postgres]",
    "psycopg",
    "yt-dlp",
    "apscheduler",
    "langchain-anthropic>=0.3.22,<1.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "alembic",
    "sqlalchemy",
    "psycopg2-binary",
]

[tool.uv]
package = false
